fix: adjust gap in result-container

--- a/random-game/style.css
+++ b/random-game/style.css
@@ -175,7 +175,7 @@ select:focus-visible {
 	visibility: hidden;
 
 	justify-content: center;
-	gap: 60px;
+	gap: 45px;
 }
 
 .settings {
